--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,10 +9,11 @@
         "-g",
         "${fileDirname}\\**.cpp",
         "-o",
-        "${fileDirname}\\build\\${fileBasenameNoExtension}.exe",
+        "${fileDirname}\\build\\main.exe",
         "-lmingw32",
         "-lSDL2main",
         "-lSDL2",
+        "-lopengl32",
       ],
       "options": {
         "cwd": "${fileDirname}"
