--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
         "-g",
         "${fileDirname}\\**.cpp",
         "-o",
-        "${fileDirname}\\build\\${fileBasenameNoExtension}.exe",
+        "${fileDirname}\\build\\main.exe",
         "-lmingw32",
         "-lSDL2main",
         "-lSDL2",
