--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,7 @@
         "-lmingw32",
         "-lSDL2main",
         "-lSDL2",
+        "-lSDL2_ttf",
       ],
       "options": {
         "cwd": "${fileDirname}"
