--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,7 @@
         "-fdiagnostics-color=always",
         "-g",
         "${fileDirname}\\**.cpp",
+        "${fileDirname}\\UI\\**.cpp",
         "-o",
         "${fileDirname}\\build\\main.exe",
         "-lmingw32",
